fix line height for more readable feeds

--- a/styles/shared/post.scss
+++ b/styles/shared/post.scss
@@ -1,4 +1,4 @@
-$post-line-height: 20px;
+$post-line-height: 30px;
 
 .post .expandable.folded {
   margin-bottom: 8px;
